RESOLVED FIXED150984
AX: Input type: time is not accessible on iOS
https://bugs.webkit.org/show_bug.cgi?id=150984
Summary AX: Input type: time is not accessible on iOS
Nan Wang
Reported 2015-11-06 16:20:39 PST
<input type="time> is a popup button on iOS.
Attachments
patch (2.53 KB, patch)
2015-11-06 16:53 PST, Nan Wang
no flags
patch (4.03 KB, patch)
2015-11-09 11:33 PST, Nan Wang
no flags
Nan Wang
Comment 1 2015-11-06 16:21:57 PST
Nan Wang
Comment 2 2015-11-06 16:53:22 PST
chris fleizach
Comment 3 2015-11-06 17:04:31 PST
Comment on attachment 264981 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=264981&action=review missing changelings > LayoutTests/accessibility/ios-simulator/input-type-time.html:23 > + shouldBe("timeinput.description", "'AXLabel: (Between: 07:00 AM-09:00 AM)'"); you should also check if accessibilityIsIgnored (it should NOT be ignored)
Nan Wang
Comment 4 2015-11-09 11:33:30 PST
chris fleizach
Comment 5 2015-11-09 12:23:36 PST
Comment on attachment 265077 [details] patch seems like this test could run on all platforms right?
Nan Wang
Comment 6 2015-11-09 13:11:06 PST
(In reply to comment #5) > Comment on attachment 265077 [details] > patch > > seems like this test could run on all platforms right? It should be. But the change is only specific to iOS.
WebKit Commit Bot
Comment 7 2015-11-09 13:16:12 PST
Comment on attachment 265077 [details] patch Clearing flags on attachment: 265077 Committed r192173: <http://trac.webkit.org/changeset/192173>
WebKit Commit Bot
Comment 8 2015-11-09 13:16:18 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.