AX: Input type: time is not accessible on iOS https://bugs.webkit.org/show_bug.cgi?id=150984

Reviewed by Chris Fleizach.

Source/WebCore:

Exposed input type: time as popup button on iOS.

Test: accessibility/ios-simulator/input-type-time.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::determineAccessibilityRole):

LayoutTests:

* accessibility/ios-simulator/input-type-time-expected.txt: Added.
* accessibility/ios-simulator/input-type-time.html: Added.


Canonical link: https://commits.webkit.org/169250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192173 268f45cc-cd09-0410-ab3c-d52691b4dbfc